--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -7,4 +7,11 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
+    .container
+    - flash.each do |name,msg|
+      - next if name.to_s == 'timedout'
+      %div{class: "alert alert-#{name}"}
+        = msg
+        %button.close{"aria-label" => "Close", "data-dismiss" => "alert", :type => "button"}
+          %span{"aria-hidden" => "true"} ×
     = yield
