--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title Carrental
+    %title Caruser
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
@@ -14,4 +14,8 @@
         = msg
         %button.close{"aria-label" => "Close", "data-dismiss" => "alert", :type => "button"}
           %span{"aria-hidden" => "true"} ×
+    %a=link_to 'Edit your account', edit_user_registration_path
+    %a=link_to 'Log out', destroy_user_session_path, method: :delete
+    %a=link_to 'Log in', new_user_session_path
+    %a=link_to 'Sign up as user', new_user_registration_path
     = yield
