--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -15,7 +15,7 @@
         %button.close{"aria-label" => "Close", "data-dismiss" => "alert", :type => "button"}
           %span{"aria-hidden" => "true"} ×
     %a=link_to 'Edit your account', edit_user_registration_path
-    -# %a=link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path
+    %a=link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path
     %a=link_to 'Log out', destroy_user_session_path, method: :delete
     %a=link_to 'Log in', new_user_session_path
     %a=link_to 'Sign up as user', new_user_registration_path
