--- a/app/views/devise/registrations/edit.haml
+++ b/app/views/devise/registrations/edit.haml
@@ -1,38 +1,37 @@
-.container
-  .col-5.offset-3
-    %h2 Edit account
-    %br
-    = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-      = f.error_notification
-      %form
-        .row
-          .form-group.col-5
-            = f.input :first_name, required: false, autofocus: true
-          .form-group.col-5
-            = f.input :last_name, required: false, autofocus: true
-        .row
-          .form-group.col-10
-            = f.input :email, required: false, autofocus: true , input_html: { autocomplete: "email" }
-        .row
-          .form-group.col-10
-            = f.input :username, required: false, autofocus: true
-        .row
-          .form-group.col-10
-            = f.input :phone_number, required: false
-        .row
-          .form-group.col-10
-            = f.input :date_of_birth, required: false
-        .row
-          .form-group.col-5
-            = f.input :gender,required: false, as: :radio_buttons, collection: [['Male', 'male'], ['Female', 'female']], label: false
-        - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-          %p
-            Currently waiting confirmation for: #{resource.unconfirmed_email}
-        .row
-          .form-group.col-10
-        = f.input :password,hint: "leave it blank if you don't want to change it",required: false,  input_html: { autocomplete: "new-password" }
-        .row
-          .form-group.col-10
-        = f.input :password_confirmation, required: false, input_html: { autocomplete: "new-password" }
-        .form-actions
-          = f.button :submit, "Update"
+.col-5.offset-3
+  %h2 Edit account
+  %br
+  = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+    = f.error_notification
+    %form
+      .row
+        .form-group.col-5
+          = f.input :first_name, required: false, autofocus: true
+        .form-group.col-5
+          = f.input :last_name, required: false, autofocus: true
+      .row
+        .form-group.col-10
+          = f.input :email, required: false, autofocus: true , input_html: { autocomplete: "email" }
+      .row
+        .form-group.col-10
+          = f.input :username, required: false, autofocus: true
+      .row
+        .form-group.col-10
+          = f.input :phone_number, required: false
+      .row
+        .form-group.col-10
+          = f.input :date_of_birth, required: false, as: :date, start_year: Date.today.year-18, end_year: Date.today.year - 100, include_blank: true
+      .row
+        .form-group.col-5
+          = f.input :gender,required: false, as: :radio_buttons, collection: User.genders.map {|k,v| k.capitalize}, label: false
+      - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+        %p
+          Currently waiting confirmation for: #{resource.unconfirmed_email}
+      .row
+        .form-group.col-10
+      = f.input :password,hint: "leave it blank if you don't want to change it",required: false,  input_html: { autocomplete: "new-password" }
+      .row
+        .form-group.col-10
+      = f.input :password_confirmation, required: false, input_html: { autocomplete: "new-password" }
+      .form-actions
+        = f.button :submit, "Update"
