--- a/app/views/devise/registrations/new.haml
+++ b/app/views/devise/registrations/new.haml
@@ -1,37 +1,36 @@
-.container
-  .col-5.offset-3
-    %h2 Sign up
-    %br
-    = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-      = f.error_notification
-      %form
-        .row
-          .form-group.col-5
-            = f.input :first_name, required: false, autofocus: true
-          .form-group.col-5
-            = f.input :last_name, required: false, autofocus: true
-        .row
-          .form-group.col-10
-            = f.input :email, required: false, autofocus: true , input_html: { autocomplete: "email" }
-        .row
-          .form-group.col-10
-            = f.input :username, required: false, autofocus: true
-        .row
-          .form-group.col-10
-            = f.input :phone_number, required: false
-        .row
-          .form-group.col-10
-            = f.input :date_of_birth, required: false
-        .row
-          .form-group.col-5
-            = f.input :gender,required: false, as: :select, collection: [['Male', 'm'], ['Female', 'f']]
-        .row
-          .form-group.col-10
-            = f.input :password, required: false,
-            hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-            input_html: { autocomplete: "new-password" }
-        .row
-          .form-group.col-10
-            = f.input :password_confirmation, required: false, input_html: { autocomplete: "new-password" }
-        .form-actions
-          = f.button :submit, "Sign up"
+.col-5.offset-3
+  %h2 Sign up
+  %br
+  = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+    = f.error_notification
+    %form
+      .row
+        .form-group.col-5
+          = f.input :first_name, required: false, autofocus: true
+        .form-group.col-5
+          = f.input :last_name, required: false, autofocus: true
+      .row
+        .form-group.col-10
+          = f.input :email, required: false, autofocus: true , input_html: { autocomplete: "email" }
+      .row
+        .form-group.col-10
+          = f.input :username, required: false, autofocus: true
+      .row
+        .form-group.col-10
+          = f.input :phone_number, required: false
+      .row
+        .form-group.col-10
+          = f.input :date_of_birth, required: false, as: :date, start_year: Date.today.year-18, end_year: Date.today.year - 100, include_blank: true
+      .row
+        .form-group.col-5
+          = f.input :gender,required: false, as: :radio_buttons, collection: User.genders.map {|k,v| k.capitalize}, label: false
+      .row
+        .form-group.col-10
+          = f.input :password, required: false,
+          hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+          input_html: { autocomplete: "new-password" }
+      .row
+        .form-group.col-10
+          = f.input :password_confirmation, required: false, input_html: { autocomplete: "new-password" }
+      .form-actions
+        = f.button :submit, "Sign up"
