add car picture in development env

--- a/app/views/cars/show.haml
+++ b/app/views/cars/show.haml
@@ -1,6 +1,6 @@
 %br
 .card
-  %img.card-img-top
+  %img.card-img-top= image_tag @car.carpic_url
   .card-body
     %p.card-text
       %strong Brand:
