--- a/app/views/cars/_form.haml
+++ b/app/views/cars/_form.haml
@@ -12,6 +12,9 @@
           =f.input :model, required: false, error: true
       .row
         .form-group.col-6
+          =f.input :carpic, as: :file, required: false, error: true
+      .row
+        .form-group.col-6
           =f.input :year, as: :date, start_year: Date.today.year, end_year: Date.today.year - 10, include_blank: true, order: [:month, :year], required: false, error: true, :discard_day => true, :discard_month => true
       .row
         .form-group.col-6
