--- a/app/views/cars/show.haml
+++ b/app/views/cars/show.haml
@@ -1,24 +1,21 @@
 %br
 .card
-  %img.card-img-top= image_tag @car.carpic_url
-  .card-body
-    %p.card-text
-      %strong Brand:
-      = @car.brand
-    %p.card-text
-      %strong Model:
-      = @car.model
-    %p.card-text
-      %strong Price:
-      = @car.price
-      $ per day
-    %p.card-text
+  .card-body#index
+    %h3.text-center.card-title=@car.full_car
+    .text-center
+      %img.card-img-top= image_tag @car.carpic_url :profile
+    %p.text-center.card-text
+      %strong Price for a day:
+      =@car.price
+      $
+    %p.text-center.card-text
       %strong Release date:
       = @car.year.strftime("%Y")
-    %p.card-text
-      %strong Description
+    %p.text-center.card-text
+      %strong Description:
       = @car.description
-      %br
-      %a= link_to 'Back to all cars', cars_path, class: "btn btn-info"
-      %a= link_to 'Edit this car', edit_car_path(@car), class: "btn btn-primary"
-      %a= link_to 'Delete this car', car_path(@car), method: :delete, class: "btn btn-danger"
+    .text-center
+      .btn-group{"aria-label" => "Basic example", role: "group"}
+        =link_to 'Back to all cars', cars_path, class: "btn btn-info"
+        =link_to 'Edit', edit_car_path(@car), :class => "button btn btn-primary"
+        =link_to 'Delete', car_path(@car), method: :delete, data: {confirm: "You sure?"},:class => "button btn btn-danger"
